gccida/c2/assign_parms
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4770:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4774:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4793:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4794:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4795:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4803:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4808:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4827:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v64; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4834:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v71; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4842:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4860:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v97; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4863:5: error: expected ';' after expression
tree result; // r14 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4863:6: error: use of undeclared identifier 'result'
tree result; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4868:7: error: use of undeclared identifier 'regno_decl'
tree *regno_decl; // rbp 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4869:7: error: use of undeclared identifier 'v106'
tree *v106; // rbp 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4877:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v114; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/function.c:4885:5: error: expected ';' after expression
tree v122; // rax 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/assign_parms/src/obj/function.o] Error 1
